--- a/src/pages/buy-collection/buy-collection.html
+++ b/src/pages/buy-collection/buy-collection.html
@@ -6,8 +6,13 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title center text-center>By Collection</ion-title>
+  <ion-navbar color="pink">
+    <ion-title center text-center>Buy Collection</ion-title>
+    <ion-buttons right>
+      <button ion-button (click)="Membership()">
+        <ion-icon ios="ios-home" md="md-home"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
