--- a/src/pages/collection/collection.html
+++ b/src/pages/collection/collection.html
@@ -17,65 +17,98 @@
   <ion-grid>
     <ion-row center text-center>
       <ion-col col-6>
-        <button ion-button block margin-bottom style="background-color: lightcoral;color:black" (click)="mycollection()">My Collection</button>
+        <button ion-button block margin-bottom color="hotpink" (click)="mycollection()">My Collection</button>
       </ion-col>
 
       <ion-col col-6>
-        <button ion-button block margin-bottom style="background-color: lightcoral;color:black" (click)="Marketplace()">Marketplace</button>
+        <button ion-button block margin-bottom color="secondary" (click)="Marketplace()">Marketplace</button>
       </ion-col>
     </ion-row>
   </ion-grid>
 
 
-  <h5>Collection Rewards</h5>
-  <ion-card>
+  <h5 center text-center>Collection Rewards</h5>
+  <ion-card (click)="DetailCollectionA()" style="background-color: lightgray">
     <ion-card-header>
-      Coll.A
+      <b>Coll.A</b>
       <br>50,000 THB
     </ion-card-header>
     <ion-card-content>
-      <ion-item>
-        <ion-icon name="football" item-start large></ion-icon>
-        <ion-icon name="bug" item-start large></ion-icon>
-        <ion-icon name="alert" item-start large></ion-icon>
-        <ion-icon name="alert" item-start large></ion-icon>
-      </ion-item>
+      <div>
+        <img src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+      </div>
+
+      <div>
+        <img src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+      </div>
+
+      <div>
+        <img src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+      </div>
+
+      <div>
+        <img src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+      </div>
+
+      <br>
       <div text-right>
         <b (click)="DetailCollectionA()">Detail ></b>
       </div>
     </ion-card-content>
   </ion-card>
 
-  <ion-card>
+  <ion-card (click)="DetailCollectionA()" style="background-color: lightgray">
     <ion-card-header>
-      Coll.B
+      <b>Coll.B</b>
       <br>30,000 THB
     </ion-card-header>
     <ion-card-content>
-      <ion-item>
-        <ion-icon name="alert" item-start large></ion-icon>
-        <ion-icon name="alert" item-start large></ion-icon>
-        <ion-icon name="alert" item-start large></ion-icon>
-        <ion-icon name="leaf" item-start large></ion-icon>
-      </ion-item>
+      <div>
+        <img src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+      </div>
+
+      <div>
+        <img src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+      </div>
+
+      <div>
+        <img src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+      </div>
+
+      <div>
+        <img src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+      </div>
+
+      <br>
       <div text-right>
         <b>Detail ></b>
       </div>
     </ion-card-content>
   </ion-card>
 
-  <ion-card>
+  <ion-card (click)="DetailCollectionA()" style="background-color: lightgray">
     <ion-card-header>
-      Coll.C
+      <b>Coll.C</b>
       <br>50,000 THB
     </ion-card-header>
     <ion-card-content>
-      <ion-item>
-        <ion-icon name="alert" item-start large></ion-icon>
-        <ion-icon name="alert" item-start large></ion-icon>
-        <ion-icon name="alert" item-start large></ion-icon>
-        <ion-icon name="alert" item-start large></ion-icon>
-      </ion-item>
+      <div>
+        <img src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+      </div>
+
+      <div>
+        <img src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+      </div>
+
+      <div>
+        <img src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30x; width: 30px;">
+      </div>
+
+      <div>
+        <img src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+      </div>
+
+      <br>
       <div text-right>
         <b>Detail ></b>
       </div>
