--- a/src/pages/marketplace/marketplace.html
+++ b/src/pages/marketplace/marketplace.html
@@ -6,8 +6,13 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="pink">
     <ion-title center text-center>Marketplace</ion-title>
+    <ion-buttons right>
+      <button ion-button (click)="Membership()">
+        <ion-icon ios="ios-home" md="md-home"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
@@ -15,7 +20,7 @@
 
 <ion-content padding>
 
-  <ion-card>
+  <ion-card style="background-color: lightgray">
     <ion-list-header>
       DD/MM/YY
     </ion-list-header>
@@ -28,7 +33,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-card>
+  <ion-card style="background-color: lightgray">
     <ion-list-header>
       DD/MM/YY
     </ion-list-header>
@@ -41,7 +46,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-card>
+  <ion-card style="background-color: lightgray">
     <ion-list-header>
       DD/MM/YY
     </ion-list-header>
@@ -54,7 +59,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-card>
+  <ion-card style="background-color: lightgray">
     <ion-list-header>
       DD/MM/YY
     </ion-list-header>
