--- a/src/pages/mycollect/mycollect.html
+++ b/src/pages/mycollect/mycollect.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="pink">
-    <ion-title>My Collect</ion-title>
+    <ion-title center text-center>My Collect</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,91 +15,180 @@
 
 <ion-content padding>
   <h2 style="margin-top: 20px;margin-bottom: 20px;" align='right' (click)="his()">Trade History</h2>
-  <ion-grid>
-    <ion-row>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+  <ion-grid center text-center (click)="detail()">
+    <ion-row wrap>
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/poe.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/card05.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/k.jpg">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/heart.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/card05.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
+      <ion-col></ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+  </ion-grid>
+
+  <ion-grid center text-center (click)="detail()">
+    <ion-row wrap>
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/poe.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/card05.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/k.jpg">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/heart.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/card05.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
+      <ion-col></ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+  </ion-grid>
+
+  <ion-grid center text-center (click)="detail()">
+    <ion-row wrap>
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/poe.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/card05.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/k.jpg">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/heart.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/card05.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
+      <ion-col></ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+  </ion-grid>
+
+  <ion-grid center text-center (click)="detail()">
+    <ion-row wrap>
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/poe.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/card05.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/k.jpg">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/heart.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col></ion-col>
+
+      <ion-col width-25 style="border: 1px solid">
+        <img src="../../assets/imgs/card05.png">
+        <div text-right>
+          <span>x1</span>
+        </div>
       </ion-col>
+      <ion-col></ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
-      </ion-col>
-    </ion-row>
+
   </ion-grid>
 </ion-content>
