--- a/src/pages/tradehistory/tradehistory.html
+++ b/src/pages/tradehistory/tradehistory.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-navbar his>
-    <ion-title>tradehistory</ion-title>
+  <ion-navbar color="pink" his>
+    <ion-title center text-center>Trade History</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
