Edit Description/Link/How to play
Signed-off-by: Kritsana <tragoolphrom@gmail.com>

--- a/src/pages/collection/collection.html
+++ b/src/pages/collection/collection.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar color="pink">
+  <ion-navbar >
     <ion-title center text-center>Collection</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
