--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar color="pink">
+  <ion-navbar >
     <ion-title>Ticket</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
