--- a/src/pages/game-detail/game-detail.html
+++ b/src/pages/game-detail/game-detail.html
@@ -17,7 +17,6 @@
 
 </ion-header>
 
-
 <ion-content>
   <ion-grid no-padding>
     <ion-row padding class="gameBanner">
@@ -36,30 +35,49 @@
   <ion-row class="bannerButton">
     <ion-col col-1></ion-col>
     <ion-col col-5 class="overButton">
-      <button ion-button full color="pink">Game</button>
+      <button ion-button full color="pink" (click)="goToPrePlay()">
+        <b>Play Game</b>
+      </button>
     </ion-col>
-    <ion-col col-5  class="overButton" >
-      <button ion-button full color="light" (click)="goToHowToPlay()">How to Play</button>
+    <ion-col col-5 class="overButton">
+      <button ion-button full color="light" (click)="goToHowToPlay()">
+        <b>How to Play</b>
+      </button>
     </ion-col>
     <ion-col col-1></ion-col>
   </ion-row>
 
-  <ion-grid style="margin-top:30px">
-      <ion-row>
-        <ion-col col-12 style="font-weight: bold">
-            Title text
-        </ion-col>
-        <ion-col col-12>
-            Description
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+  <ion-grid style="margin-top:60px">
+    <ion-row>
+      <ion-col col-12 style="font-weight: bold">
+        Title text
+      </ion-col>
+      <ion-col col-12>
+        Description
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
+  <ion-grid class="page-footer" no-padding>
+    <ion-row>
+      <ion-col col-12 style="text-align: center;font-size: 16px" (click)="goToConvertClick()">
+        <button ion-button color="dark" clear block>
+          <b>Convert ticket</b>
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
-
-
-
-<ion-footer>
-  <ion-toolbar style="text-align:center" color="pink">
-    <ion-title (click)="goToConvertClick()">Convert ticket</ion-title>
-  </ion-toolbar>
-</ion-footer>
