--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="pink">
+  <ion-navbar>
     <ion-buttons left>
         <button style="font-size: 15px" ion-button (click)="gopage1()">WEB</button>
       <button ion-button>
