--- a/src/pages/pre-playgame/pre-playgame.html
+++ b/src/pages/pre-playgame/pre-playgame.html
@@ -8,6 +8,11 @@
 
   <ion-navbar color="pink">
     <ion-title>Ticket Game</ion-title>
+    <ion-buttons right>
+        <button ion-button (click)="Membership()">
+          <ion-icon ios="ios-home" md="md-home" ></ion-icon>
+        </button>
+      </ion-buttons>
   </ion-navbar>
 
 </ion-header>
