--- a/src/pages/pre-playgame/pre-playgame.html
+++ b/src/pages/pre-playgame/pre-playgame.html
@@ -112,7 +112,7 @@
       </ion-grid>
     </ion-row>
 
-    <ion-row class="played">
+    <ion-row class="played" (click)="goResult()">
       <ion-grid>
         <ion-row>
           <ion-col col-12 class="ticket-title">
@@ -122,12 +122,15 @@
         <ion-row>
           <ion-col col-9 class="game-title">
             Game AAA
+          </ion-col>
+          <ion-col col-3 class="play-title">
+            Result >
           </ion-col>
         </ion-row>
       </ion-grid>
     </ion-row>
 
-    <ion-row class="played">
+    <ion-row class="played" (click)="goResult()">
       <ion-grid>
         <ion-row>
           <ion-col col-12 class="ticket-title">
@@ -137,6 +140,9 @@
         <ion-row>
           <ion-col col-9 class="game-title">
             Game AAA
+          </ion-col>
+          <ion-col col-3 class="play-title">
+            Result >
           </ion-col>
         </ion-row>
       </ion-grid>
