--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -9,18 +9,19 @@
 
 <ion-content padding text-center>
   <h2>Game Result</h2>
-  <textarea style="height: 50%;width: 100%;background-color: black;margin-top: 20px;margin-bottom: 20px;"></textarea>
 
+  <div padding (click)="winpage()">
+    <img src="../../assets/imgs/Reward.png" style="height: 200px;" />
+  </div>
 
   <ion-grid class="page-footer" no-padding>
-      <ion-row>
-        <ion-col col-12 style="text-align: center;font-size: 16px" (click)="Done()">
-          <button ion-button color="dark" clear block>
-            <b>Done</b>
-          </button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-    
-</ion-content>
+    <ion-row>
+      <ion-col col-12 style="text-align: center;font-size: 16px" (click)="Done()">
+        <button ion-button color="dark" clear block>
+          <b>Done</b>
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
+</ion-content>
