--- a/src/pages/wingame/wingame.html
+++ b/src/pages/wingame/wingame.html
@@ -1,10 +1,5 @@
 <ion-header>
   <ion-navbar>
-    <ion-buttons left>
-      <button ion-button>
-        <ion-icon name="menu"></ion-icon>
-      </button>
-    </ion-buttons>
     <ion-buttons right>
       <button ion-button>
         <ion-icon name="bookmark"></ion-icon>
@@ -20,7 +15,7 @@
 
   <ion-list>
     <ion-item no-padding>
-      <ion-grid (click)="blankpage()">
+      <ion-grid>
         <ion-row>
           <ion-col col-2>
             <div style="padding-top: 30px">
@@ -34,7 +29,7 @@
                   <b>คุณชนะ lotto</b>
                 </ion-col>
                 <ion-col col-12>
-                  <h6>Title text 350000 BTH</h6>
+                  <h6>Earn Reward 350,000 THB</h6>
                 </ion-col>
               </ion-row>
             </ion-grid>
