--- a/src/pages/detailcollection/detailcollection.html
+++ b/src/pages/detailcollection/detailcollection.html
@@ -17,8 +17,8 @@
   <ion-grid>
     <ion-row>
       <ion-col col-3></ion-col>
-      <ion-col col-6 text-center style="background-color: gray">
-        <img src="../../assets/imgs/sq.png" />    x1
+      <ion-col height="150px" width="300px" col-6 text-center style="background-color: gray">
+        <img src="../../assets/imgs/diamonds.png" />    x1
       </ion-col>
       <ion-col col-3></ion-col>
     </ion-row>
