--- a/src/pages/losegame/losegame.html
+++ b/src/pages/losegame/losegame.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="pink">
     <ion-buttons left>
       <button ion-button>
         <ion-icon name="menu"></ion-icon>
@@ -11,6 +11,11 @@
       </button>
       <button ion-button>
         <ion-icon name="cart"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-buttons right>
+      <button ion-button (click)="gotoHome()">
+        <ion-icon ios="ios-home" md="md-home"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
@@ -48,7 +53,7 @@
   </ion-list>
   <ion-grid class="page-footer" no-padding>
     <ion-row style="align-self: center">
-      <img src="../../assets/imgs/foot.PNG"/>
+      <img src="../../assets/imgs/foot.PNG" />
     </ion-row>
   </ion-grid>
 
