--- a/src/pages/lottogame/lottogame.html
+++ b/src/pages/lottogame/lottogame.html
@@ -2,6 +2,11 @@
 
   <ion-navbar color="pink">
     <ion-title>Play Game xxx</ion-title>
+    <ion-buttons right>
+      <button ion-button (click)="gotoHome()">
+        <ion-icon ios="ios-home" md="md-home"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
