--- a/src/pages/mycollect/mycollect.html
+++ b/src/pages/mycollect/mycollect.html
@@ -15,90 +15,165 @@
 
 <ion-content padding>
   <h2 style="margin-top: 20px;margin-bottom: 20px;" align='right' (click)="his()">Trade History</h2>
-  <ion-grid>
+  <ion-grid text-center>
     <ion-row>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b" (click)="detail()">
+        <img src="../../assets/imgs/diamonds.png" style="height: 50px;" />
+        <div text-right>
+          x1
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/card05.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b" (click)="detail()">
+        <img src="../../assets/imgs/phodrum.png" style="height: 50px;" />
+        <div text-right>
+          x1
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b" (click)="detail()">
+        <img src="../../assets/imgs/blackheart.png" style="height: 50px;" />
+        <div text-right>
+          x1
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
+      <ion-col class="b" (click)="detail()">
         <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+        <div text-right>
+          x1
+        </div>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/phodrum.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/diamonds.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/blackheart.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/card05.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
-      </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/diamonds.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b" (click)="detail()">
+        <img src="../../assets/imgs/blackheart.png" style="height: 50px;" />
+        <div text-right>
+          x1
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/phodrum.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/card05.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b" (click)="detail()">
+        <img class="alpha" src="../../assets/imgs/blackheart.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/diamonds.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/phodrum.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
+      <ion-col class="b" (click)="detail()">
         <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+        <div text-right>
+          x1
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/phodrum.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/diamonds.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
-      <ion-col (click)="detail()">
-        <img src="../../assets/imgs/card05.png" style="height: 50px;" />
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/blackheart.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class="b" (click)="detail()">
+        <img class="alpha" src="../../assets/imgs/card05.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
+      </ion-col>
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/diamonds.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
+      </ion-col>
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/phodrum.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
+      </ion-col>
+      <ion-col class="b" (click)="detail()">
+        <img src="../../assets/imgs/blackheart.png" style="height: 50px;" />
+        <div text-right>
+          x1
+        </div>
+      </ion-col>
+      <ion-col class="b">
+        <img class="alpha" src="../../assets/imgs/card05.png" style="height: 50px;" />
+        <div text-right>
+          x0
+        </div>
       </ion-col>
     </ion-row>
   </ion-grid>
