available click on collection card

--- a/src/pages/collection/collection.html
+++ b/src/pages/collection/collection.html
@@ -29,11 +29,11 @@
 
   <h5>Collection Rewards</h5>
   <ion-card>
-    <ion-card-header>
+    <ion-card-header (click)="DetailCollectionA()">
       Coll.A
       <br>50,000 THB
     </ion-card-header>
-    <ion-card-content>
+    <ion-card-content (click)="DetailCollectionA()">
       <ion-item>
         <ion-icon name="football" item-start large></ion-icon>
         <ion-icon name="bug" item-start large></ion-icon>
