Update IMG Game
Signed-off-by: Kritsana <tragoolphrom@gmail.com>

--- a/src/pages/convert/convert.html
+++ b/src/pages/convert/convert.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar color="pink">
+  <ion-navbar>
     <ion-title>Convert Ticket</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
@@ -19,21 +19,21 @@
 
 
 <ion-content>
+  <div padding style="text-align: center;font-size: 18px">
+    <b>Select Game</b>
+  </div>
   <div class="content">
     <ion-item no-lines class="itemContent">
       <ion-row>
         <ion-col col-4>
-          Game xxx
+          Game AAA
         </ion-col>
-        <!-- <ion-col col-4 offset-4>
-          (Ticket 10)
-        </ion-col> -->
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-card style="background-color: gray;" (click)="goToConvertClick()">
-            <div class="card-title">GAME A IMG</div>
-          </ion-card>
+          <div (click)="goToConvertClick()">
+            <img src="../../assets/imgs/GameA.jpg" style="height: 120px;width: 300px" />
+          </div>
         </ion-col>
       </ion-row>
     </ion-item>
@@ -41,17 +41,14 @@
     <ion-item no-lines class="itemContent">
       <ion-row>
         <ion-col col-4>
-          Game xxx
+          Game BBB
         </ion-col>
-        <!-- <ion-col col-4 offset-4>
-          (Ticket 10)
-        </ion-col> -->
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-card style="background-color: gray;" (click)="goToConvertClick()">
-            <div class="card-title">GAME B IMG</div>
-          </ion-card>
+          <div (click)="goToConvertClick()">
+            <img src="../../assets/imgs/GameB.jpg" style="height: 120px;width: 300px" />
+          </div>
         </ion-col>
       </ion-row>
     </ion-item>
@@ -59,17 +56,14 @@
     <ion-item no-lines class="itemContent">
       <ion-row>
         <ion-col col-4>
-          Game xxx
+          Game CCC
         </ion-col>
-        <!-- <ion-col col-4 offset-4>
-          (Ticket 10)
-        </ion-col> -->
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-card style="background-color: gray;" (click)="goToConvertClick()">
-            <div class="card-title" >GAME C IMG</div>
-          </ion-card>
+          <div (click)="goToConvertClick()">
+            <img src="../../assets/imgs/GameC.png" style="height: 120px;width: 300px" />
+          </div>
         </ion-col>
       </ion-row>
     </ion-item>
@@ -77,17 +71,14 @@
     <ion-item no-lines class="itemContent">
       <ion-row>
         <ion-col col-4>
-          Game xxx
+          Game DDD
         </ion-col>
-        <!-- <ion-col col-4 offset-4>
-          (Ticket 10)
-        </ion-col> -->
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-card style="background-color: gray;" (click)="goToConvertClick()">
-            <div class="card-title">GAME D IMG</div>
-          </ion-card>
+          <div (click)="goToConvertClick()">
+            <img src="../../assets/imgs/GameD.jpg" style="height: 120px;width: 300px" />
+          </div>
         </ion-col>
       </ion-row>
     </ion-item>
