--- a/src/pages/game-detail/game-detail.html
+++ b/src/pages/game-detail/game-detail.html
@@ -27,7 +27,7 @@
         Round : 1 (01/07/2018-30/07/2018)
       </ion-col>
       <ion-col col-12>
-        <h2>Game Banner</h2>
+        <h2>Game AAA</h2>
       </ion-col>
     </ion-row>
   </ion-grid>
