--- a/src/pages/pre-playgame/pre-playgame.html
+++ b/src/pages/pre-playgame/pre-playgame.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar color="pink">
+  <ion-navbar>
     <ion-title>Ticket Game</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
@@ -69,7 +69,7 @@
           <ion-col col-9 class="game-title">
             Game AAA
           </ion-col>
-          <ion-col col-3  class="play-title">
+          <ion-col col-3 class="play-title">
             Play >
           </ion-col>
         </ion-row>
