--- a/src/pages/detailcollection/detailcollection.html
+++ b/src/pages/detailcollection/detailcollection.html
@@ -14,19 +14,14 @@
 
 
 <ion-content padding center>
-  <ion-grid>
-    <ion-row wrap>
+  <ion-grid text-center>
+    <ion-row>
       <ion-col col-3></ion-col>
-<<<<<<< HEAD
-      <ion-col col-6 style="border: solid 1px">
-        <img src="../../assets/imgs/k.jpg" >
+      <ion-col col-6 class="b" (click)="detail()" style="border: solid 1px">
+        <img src="../../assets/imgs/diamonds.png" style="height: 120px;" />
         <div text-right>
-          <span>x1</span>
+          x1
         </div>
-=======
-      <ion-col height="150px" width="300px" col-6 text-center style="background-color: gray">
-        <img src="../../assets/imgs/diamonds.png" />    x1
->>>>>>> 6435b286757aeb51f6fe119920fa68fd12c6a1db
       </ion-col>
       <ion-col col-3></ion-col>
     </ion-row>
