--- a/src/pages/collection-detail/collection-detail.html
+++ b/src/pages/collection-detail/collection-detail.html
@@ -87,7 +87,7 @@
           <img src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
         </div>
         Name xxx
-        <button style="background-color: lightcoral;color: black" ion-button default item-end (click)="BuyItem()">Buy</button>
+        <button color="secondary" ion-button default item-end (click)="BuyItem()">Buy</button>
       </ion-item>
     </ion-list>
 
@@ -97,7 +97,7 @@
           <img src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
         </div>
         Name xxx
-        <button style="background-color: lightcoral;color: black" ion-button default item-end>Buy</button>
+        <button color="secondary" ion-button default item-end>Buy</button>
       </ion-item>
     </ion-list>
 
