--- a/src/pages/sell/sell.html
+++ b/src/pages/sell/sell.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="pink">
     <ion-title>Trade</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
@@ -7,22 +7,23 @@
       </button>
     </ion-buttons>
   </ion-navbar>
+  <ion-grid no-padding>
+    <ion-row style="text-align: center" (click)="Trade()">
+      <ion-col col-6 style="background-color:lightgray;border: 1px solid black;">
+        <button ion-button color="dark" clear block ><b>Buy</b></button>
+      </ion-col>
+      <ion-col col-6 class="page-button" >
+        <button ion-button color="dark" clear block style="color : white"><b>Sell</b></button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-header>
 
 
 <ion-content>
-  <ion-grid class="page-header" no-padding>
-    <ion-row style="text-align: center">
-      <ion-col col-6 style="background-color: lightgray;" (click)="Trade()">
-        <button ion-button color="dark" clear block><b>Buy</b></button>
-      </ion-col>
-      <ion-col col-6 style="background-color: lightcoral">
-        <button ion-button color="dark" clear block><B>Sell</B></button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  
   <ion-grid>
-    <ion-row style="padding-top: 0px"></ion-row>
+    <ion-row style="padding-top: 10px"></ion-row>
     <ion-row style="background-color: lightgrey;height: 90px">
       <ion-col col-12>
         Sell amount
@@ -138,7 +139,7 @@
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirm()">
-        <button ion-button color="dark" clear block><B>Confirm</B></button>
+        <button ion-button color="dark" clear block style="color: white"><B>Confirm</B></button>
       </ion-col>
     </ion-row>
   </ion-grid>
