--- a/src/pages/trade/trade.html
+++ b/src/pages/trade/trade.html
@@ -7,22 +7,23 @@
       </button>
     </ion-buttons>
   </ion-navbar>
-</ion-header>
-
-
-<ion-content>
-  <ion-grid class="page-header" no-padding>
+  <ion-grid no-padding>
     <ion-row style="text-align: center">
-      <ion-col col-6 style="background-color: lightcoral;">
-        <button ion-button color="dark" clear block><b>Buy</b></button>
+      <ion-col col-6 class="page-button">
+        <button ion-button color="dark" clear block style="color : white;"><b>Buy</b></button>
       </ion-col>
-      <ion-col col-6 style="background-color: lightgray" (click)="Sell()">
+      <ion-col col-6 style="background-color: lightgray;border: 1px solid black;" (click)="Sell()">
         <button ion-button color="dark" clear block><b>Sell</b></button>
       </ion-col>
     </ion-row>
   </ion-grid>
+</ion-header>
+
+
+<ion-content>
+  
   <ion-grid>
-    <ion-row style="padding-top: 50px"></ion-row>
+    <ion-row style="padding-top: 10px"></ion-row>
     <ion-row padding style="background-color: lightgrey;height: 120px">
       <ion-col col-12>
         Buy amount
@@ -127,7 +128,7 @@
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirm()">
-        <button ion-button color="dark" clear block><b>Confirm</b></button>
+        <button ion-button color="dark" clear block style="color : white"><b>Confirm</b></button>
       </ion-col>
     </ion-row>
   </ion-grid>
