--- a/src/pages/membership/membership.html
+++ b/src/pages/membership/membership.html
@@ -35,7 +35,7 @@
       </ion-col>
     </ion-row>
     <ion-grid no-padding>
-      <ion-row padding style="text-align: center;background-color: lightgray">
+      <ion-row padding style="text-align: center;background-color: #990000;color:white">
         <ion-col col-12>
           <b>Prize pool : 1,000,000 THB</b>
         </ion-col>
