--- a/src/pages/collection/collection.html
+++ b/src/pages/collection/collection.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar >
+  <ion-navbar color="pink" >
     <ion-title center text-center>Collection</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
