edit font color

--- a/src/pages/detailcollection/detailcollection.html
+++ b/src/pages/detailcollection/detailcollection.html
@@ -27,7 +27,7 @@
     </ion-row>
     <ion-row>
       <ion-col text-center center>
-        <button ion-button icon-start (click)="tr()">
+        <button color="pink" ion-button icon-start (click)="tr()">
           Trade
         </button>
       </ion-col>
