--- a/src/pages/pre-playgame/pre-playgame.html
+++ b/src/pages/pre-playgame/pre-playgame.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="pink">
     <ion-title>Ticket Game</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
