--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -79,7 +79,7 @@
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="goToConvert()">
-        <button ion-button color="dark" clear block>
+        <button ion-button style="color:white;" clear block>
           <b>Convert ticket</b>
         </button>
       </ion-col>
