--- a/src/pages/trade/trade.html
+++ b/src/pages/trade/trade.html
@@ -128,7 +128,7 @@
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="showConfirm()">
-        <button ion-button color="dark" clear block style="color : white"><b>Confirm</b></button>
+        <button  ion-button clear block style="color : white"><b>Confirm</b></button>
       </ion-col>
     </ion-row>
   </ion-grid>
