--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -18,11 +18,21 @@
   <div padding (click)="winpage()">
     <img src="../../assets/imgs/Reward.png" style="height: 200px;" />
   </div>
+  <ion-grid>
+    <ion-row>
+      <ion-col col-6>
+          <button ion-button color="light" clear (click)="winpage()">Win</button>
+      </ion-col>
+      <ion-col col-6>
+          <button ion-button color="light" clear (click)="losepage()">Lose</button>
 
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="Done()">
-        <button ion-button color="dark" clear block>
+        <button ion-button style="color:white;" clear block>
           <b>Done</b>
         </button>
       </ion-col>
@@ -30,3 +40,4 @@
   </ion-grid>
 
 </ion-content>
+<ion-foot
