--- a/src/pages/gameresult/gameresult.html
+++ b/src/pages/gameresult/gameresult.html
@@ -18,7 +18,9 @@
   <div padding (click)="winpage()">
     <img src="../../assets/imgs/Reward.png" style="height: 200px;" />
   </div>
-
+  <div>
+    <h5>Win 350,000 THB!</h5>
+  </div>
   <ion-grid class="page-footer" no-padding>
     <ion-row>
       <ion-col col-12 style="text-align: center;font-size: 16px" (click)="Done()">
