--- a/src/pages/membership/membership.html
+++ b/src/pages/membership/membership.html
@@ -6,8 +6,10 @@
 
 <ion-content>
   <ion-grid class="page-header" no-padding>
-    <ion-row style="align-self: center;padding-top: 20px;padding-bottom: 70px">
-      <h1>Lotto Banner</h1>
+    <ion-row style="align-self: center;padding-bottom: 70px">
+      <div>
+        <img src="../../assets/imgs/banner2.jpg" style="height: 140px;width: 400px" />
+      </div>
     </ion-row>
     <ion-row style="text-align: center">
       <ion-col col-4>
@@ -23,7 +25,7 @@
   </ion-grid>
 
   <ion-grid>
-    <ion-row style="padding-top: 140px"></ion-row>
+    <ion-row style="padding-top: 170px"></ion-row>
     <ion-row padding>
       <ion-col col-4>
         <b>
@@ -35,7 +37,7 @@
       </ion-col>
     </ion-row>
     <ion-grid no-padding>
-      <ion-row padding style="text-align: center;background-color: lightgray">
+      <ion-row padding style="text-align: center;background-color: lightskyblue">
         <ion-col col-12>
           <b>Prize pool : 1,000,000 THB</b>
         </ion-col>
