--- a/src/pages/convertclick/convertclick.html
+++ b/src/pages/convertclick/convertclick.html
@@ -28,7 +28,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <div (click)="goToConvertClick()">
+          <div>
             <img src="../../assets/imgs/GameA.jpg" style="height: 120px;width: 300px" />
           </div>
         </ion-col>
