--- a/src/pages/collection-detail/collection-detail.html
+++ b/src/pages/collection-detail/collection-detail.html
@@ -28,11 +28,11 @@
         <b>50,000 THB</b>
         <div class="col">
           <div>
-            <img src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+            <img class="alpha" src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
           </div>
 
           <div>
-            <img src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+            <img class="alpha" src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
           </div>
 
           <div>
@@ -65,7 +65,7 @@
     <ion-list>
       <ion-item style="background-color: lightgrey">
         <div>
-          <img src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+          <img class="alpha" src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
         </div>
         Name xxx
         <button style="color: lightgrey" color="light" ion-button default item-end>Buy</button>
@@ -75,7 +75,7 @@
     <ion-list>
       <ion-item style="background-color: lightgrey">
         <div>
-          <img src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+          <img class="alpha" src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
         </div> Name xxx
         <button style="color: lightgrey" color="light" ion-button default item-end>Buy</button>
       </ion-item>
