--- a/src/pages/collection/collection.html
+++ b/src/pages/collection/collection.html
@@ -34,7 +34,7 @@
     </ion-card-header>
     <ion-card-content>
       <div>
-        <img src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+        <img class="alpha" src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
       </div>
 
       <div>
@@ -42,11 +42,11 @@
       </div>
 
       <div>
-        <img src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+        <img class="alpha" src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
       </div>
 
       <div>
-        <img src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+        <img class="alpha" src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
       </div>
 
       <br>
@@ -68,15 +68,15 @@
       </div>
 
       <div>
-        <img src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+        <img class="alpha" src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
       </div>
 
       <div>
-        <img src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+        <img class="alpha" src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
       </div>
 
       <div>
-        <img src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+        <img class="alpha" src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
       </div>
 
       <br>
@@ -93,19 +93,19 @@
     </ion-card-header>
     <ion-card-content>
       <div>
-        <img src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+        <img class="alpha" src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
       </div>
 
       <div>
-        <img src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+        <img class="alpha" src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
       </div>
 
       <div>
-        <img src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30x; width: 30px;">
+        <img class="alpha" src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30x; width: 30px;">
       </div>
 
       <div>
-        <img src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+        <img class="alpha" src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
       </div>
 
       <br>
