--- a/src/pages/collection-detail/collection-detail.html
+++ b/src/pages/collection-detail/collection-detail.html
@@ -28,19 +28,19 @@
         <b>50,000 THB</b>
         <div class="col">
           <div>
-            <img class="alpha" src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+            <img src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
           </div>
 
           <div>
-            <img class="alpha" src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+            <img src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
           </div>
 
           <div>
-            <img src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30x; width: 30px;">
+            <img class="alpha" src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30x; width: 30px;">
           </div>
 
           <div>
-            <img src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+            <img class="alpha" src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
           </div>
         </div>
       </ion-col>
@@ -65,7 +65,7 @@
     <ion-list>
       <ion-item style="background-color: lightgrey">
         <div>
-          <img class="alpha" src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+          <img src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
         </div>
         Name xxx
         <button style="color: lightgrey" color="light" ion-button default item-end>Buy</button>
@@ -75,7 +75,7 @@
     <ion-list>
       <ion-item style="background-color: lightgrey">
         <div>
-          <img class="alpha" src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+          <img src="../../assets/imgs/card05.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
         </div> Name xxx
         <button style="color: lightgrey" color="light" ion-button default item-end>Buy</button>
       </ion-item>
@@ -84,7 +84,7 @@
     <ion-list>
       <ion-item style="background-color: lightgrey">
         <div>
-          <img src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+          <img class="alpha" src="../../assets/imgs/k.jpg" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
         </div>
         Name xxx
         <button color="secondary" ion-button default item-end (click)="BuyItem()">Buy</button>
@@ -94,7 +94,7 @@
     <ion-list>
       <ion-item style="background-color: lightgrey">
         <div>
-          <img src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+          <img class="alpha" src="../../assets/imgs/heart.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
         </div>
         Name xxx
         <button color="secondary" ion-button default item-end>Buy</button>
