--- a/src/pages/collection/collection.html
+++ b/src/pages/collection/collection.html
@@ -34,7 +34,7 @@
     </ion-card-header>
     <ion-card-content>
       <div>
-        <img class="alpha" src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
+        <img src="../../assets/imgs/poe.png" style="float:left; margin-right: 5px; height: 30px; width: 30px;">
       </div>
 
       <div>
