--- a/src/pages/membership/membership.html
+++ b/src/pages/membership/membership.html
@@ -63,7 +63,7 @@
         <b>Game BBB</b>
       </ion-col>
       <ion-col col-12>
-        <div (click)="goToGameDetailPage()">
+        <div (click)="goB()">
           <img src="../../assets/imgs/GameB.jpg" style="height: 120px;width: 300px" />
         </div>
       </ion-col>
