--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -73,8 +73,8 @@
         </ion-col>
       </ion-row>
     </ion-item>
-
   </div>
+  <div style="padding-bottom: 60px"></div>
 
   <ion-grid class="page-footer" no-padding>
     <ion-row>
