--- a/src/pages/membership/membership.html
+++ b/src/pages/membership/membership.html
@@ -73,7 +73,7 @@
         <b>Game CCC</b>
       </ion-col>
       <ion-col col-12>
-        <div (click)="goToGameDetailPage()">
+        <div (click)="goC()">
           <img src="../../assets/imgs/GameC.png" style="height: 120px;width: 300px" />
         </div>
       </ion-col>
