--- a/src/pages/game-detail-c/game-detail-c.html
+++ b/src/pages/game-detail-c/game-detail-c.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="pink">
-    <ion-title>Ticket</ion-title>
+    <ion-title>Game CCC</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
