--- a/src/pages/membership/membership.html
+++ b/src/pages/membership/membership.html
@@ -84,7 +84,7 @@
         <b>Game DDD</b>
       </ion-col>
       <ion-col col-12>
-        <div (click)="goToGameDetailPage()">
+        <div (click)="goD()">
           <img src="../../assets/imgs/GameD.jpg" style="height: 120px;width: 300px" />
         </div>
       </ion-col>
