--- a/src/pages/game-detail-d/game-detail-d.html
+++ b/src/pages/game-detail-d/game-detail-d.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="pink">
-    <ion-title>Game BBB</ion-title>
+    <ion-title>Game DDD</ion-title>
     <ion-buttons right>
       <button ion-button (click)="Membership()">
         <ion-icon ios="ios-home" md="md-home"></ion-icon>
@@ -27,7 +27,7 @@
         Round : 1 (01/07/2018-30/07/2018)
       </ion-col>
       <ion-col col-12>
-        <h2>Game BBB</h2>
+        <h2>Game DDD</h2>
       </ion-col>
     </ion-row>
   </ion-grid>
