--- a/src/pages/convert/convert.html
+++ b/src/pages/convert/convert.html
@@ -46,7 +46,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <div (click)="goToConvertClick()">
+          <div (click)="goB()">
             <img src="../../assets/imgs/GameB.jpg" style="height: 120px;width: 300px" />
           </div>
         </ion-col>
@@ -61,7 +61,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <div (click)="goToConvertClick()">
+          <div (click)="goC()">
             <img src="../../assets/imgs/GameC.png" style="height: 120px;width: 300px" />
           </div>
         </ion-col>
@@ -76,7 +76,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <div (click)="goToConvertClick()">
+          <div (click)="goD()">
             <img src="../../assets/imgs/GameD.jpg" style="height: 120px;width: 300px" />
           </div>
         </ion-col>
